--- a/templates/index.html
+++ b/templates/index.html
@@ -3,35 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link  rel="stylesheet" href="/static/style_for_index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/static/style_for_index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="Main_text">Select a File from the list and choose functions</h2>
-    <div class="mb-3">
-        <label class="label_select">Select File:</label>
-        <select class="form-select form-select-sm" aria-label="Large select example">
-            {% for file in files %}
-                <option value="{{ file }}">{{ file }}</option>
-            {% endfor %}
-        </select>
-        <div class ="form-check_all">
-            <label class="label_check">Select options</label>
-                {% for function in functions %}
-            <div class="form_check_inpt_only"></div>
-                <input class="form_check-input", type="checkbox" , id="{{function}}" value="{{function}}">
-                <label class="form_check-label" for="{{function}}">{{function}}</label>
+        <h2 class="Main_text">Select a file from the list and choose functions</h2>
+        <form id="fileForm">
+            <div class="mb-3">
+                <label class="label_select">Select File:</label>
+                <select id="fileSelect" class="form-select form-select-sm">
+                    {% for file in files %}
+                        <option value="{{ file }}">{{ file }}</option>
+                    {% endfor %}
+                </select>
+                <div class="form-check_all">
+                    <label class="label_check">Select Functions:</label>
+                    {% for function_file, function_list in functions.items() %}
+                        {% for function in function_list %}
+                            <div class="form_check_inpt_only">
+                                <input class="form-check-input" type="checkbox" id="{{ function }}" value="{{ function }}">
+                                <label class="form-check-label" for="{{ function }}">{{ function }}</label>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                </div>
+
+
+                <button id="confirm-button" type="button" class="btn btn-outline-primary">Confirm</button>
             </div>
-                {% endfor %}
+        </form>
+
+        <div class="mt-4">
+            <h3>Result:</h3>
+            <div id="result"></div>
         </div>
-        <button type="button" class=" button btn btn-outline-primary">Primary</button>
-
     </div>
-</div>
-
+<script src="{{ url_for('static', filename='JS_for_index.js') }}"></script>
 
 
 </body>
