--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Data Analysis System</title>
+    <link rel="icon" type="image/png" href="/static/monitor.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/static/style_for_index.css">
@@ -11,7 +12,7 @@
 <body>
     <div class="container mt-5">
         <h2 class="Main_text">Select a file from the list and choose functions</h2>
-        <form id="fileForm">
+        <form  class = "form" id="fileForm">
             <div class="mb-3">
                 <label class="label_select">Select File:</label>
                 <select id="fileSelect" class="form-select form-select-sm">
@@ -38,7 +39,6 @@
 
         <div class="mt-4">
             <h3>Result:</h3>
-            <div id="result"></div>
         </div>
     </div>
 <script src="{{ url_for('static', filename='JS_for_index.js') }}"></script>
