--- a/templates/index.html
+++ b/templates/index.html
@@ -29,17 +29,17 @@
                 <input class="form-check-input" type="checkbox" name="functions" id="{{ function }}"
                        value="{{ function }}">
                 <label class="form-check-label" for="{{ function }}">{{ function }}
-                {% if args_info[function] ==2 %}
+                {% if args_info[function] ==3 %}
                 <span class="text-muted">(requires selection of two columns)</span>
                 {% endif %}
                 </label>
-                {% if args_info[function] == 1 %}
+                {% if args_info[function] == 2 %}
                 <select name="args_{{ function }}[]" class="form-select form-select-sm">
                     {% for col in columns %}
                     <option value="{{ col }}">{{ col }}</option>
                     {% endfor %}
                 </select>
-                {% elif args_info[function] == 2 %}
+                {% elif args_info[function] == 3%}
                 <div>
                     {% for col in columns %}
                     <div class="form-check">
@@ -49,6 +49,8 @@
                     </div>
                     {% endfor %}
                 </div>
+                {% elif args_info[function] == 1 %}
+                <input type="hidden" name="args_{{ function }}[]" value="">
                 {% endif %}
             </div>
             {% endfor %}
